Clean up the charts

--- a/free5gc-kpt/amf/amf-networkattachmentdefinition.yaml
+++ b/free5gc-kpt/amf/amf-networkattachmentdefinition.yaml
@@ -16,6 +16,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: n2network-amf
+  namespace: free5gc-cp
 spec:
   config: '{
       "cniVersion": "0.3.1",
