--- a/free5gc-kpt/mongodb/serviceaccount.yaml
+++ b/free5gc-kpt/mongodb/serviceaccount.yaml
@@ -8,7 +8,6 @@ metadata:
   labels:
     app.kubernetes.io/name: mongodb
     helm.sh/chart: mongodb-10.7.0
-    app.kubernetes.io/instance: release-name
-    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/instance: free5gc
 secrets:
   - name: mongodb
