--- a/free5gc-kpt/mongodb/dep-sts.yaml
+++ b/free5gc-kpt/mongodb/dep-sts.yaml
@@ -8,8 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/name: mongodb
     helm.sh/chart: mongodb-10.7.0
-    app.kubernetes.io/instance: release-name
-    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/instance: free5gc
     app.kubernetes.io/component: mongodb
 spec:
   serviceName: mongodb
@@ -18,29 +17,27 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: mongodb
-      app.kubernetes.io/instance: release-name
+      app.kubernetes.io/instance: free5gc
       app.kubernetes.io/component: mongodb
   template:
     metadata:
       labels:
         app.kubernetes.io/name: mongodb
         helm.sh/chart: mongodb-10.7.0
-        app.kubernetes.io/instance: release-name
-        app.kubernetes.io/managed-by: Helm
+        app.kubernetes.io/instance: free5gc
         app.kubernetes.io/component: mongodb
     spec:
       
       serviceAccountName: mongodb
       affinity:
         podAffinity:
-          
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - podAffinityTerm:
                 labelSelector:
                   matchLabels:
                     app.kubernetes.io/name: mongodb
-                    app.kubernetes.io/instance: release-name
+                    app.kubernetes.io/instance: free5gc
                     app.kubernetes.io/component: mongodb
                 namespaces:
                   - "default"
