--- a/free5gc-kpt/mongodb/svc.yaml
+++ b/free5gc-kpt/mongodb/svc.yaml
@@ -8,8 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/name: mongodb
     helm.sh/chart: mongodb-10.7.0
-    app.kubernetes.io/instance: release-name
-    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/instance: free5gc
     app.kubernetes.io/component: mongodb
 spec:
   type: ClusterIP
@@ -20,5 +19,5 @@ spec:
       nodePort: null
   selector:
     app.kubernetes.io/name: mongodb
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: free5gc
     app.kubernetes.io/component: mongodb
