--- a/free5gc-kpt/smf/smf-networkattachmentdefinition.yaml
+++ b/free5gc-kpt/smf/smf-networkattachmentdefinition.yaml
@@ -16,6 +16,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: n4network-smf
+  namespace: free5gc-cp
 spec:
   config: '{
       "cniVersion": "0.3.1",
