--- a/free5gc-kpt/webui/webui-service.yaml
+++ b/free5gc-kpt/webui/webui-service.yaml
@@ -19,9 +19,8 @@ metadata:
   labels:
     helm.sh/chart: webui-0.1.2
     app.kubernetes.io/name: webui
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: free5gc
     app.kubernetes.io/version: "v3.1.1"
-    app.kubernetes.io/managed-by: Helm
     project: free5gc
     nf: webui
 spec:
@@ -34,6 +33,6 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: webui
-    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/instance: free5gc
     project: free5gc
     nf: webui
