--- a/ueransim-kpt/gnb/gnb-n3-nad.yaml
+++ b/ueransim-kpt/gnb/gnb-n3-nad.yaml
@@ -3,6 +3,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: n3network-release-name-ueransim
+  namespace: ueransim
 spec:
   config: '{
       "cniVersion": "0.3.1",
